--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
   <title>Product Landing Page | Responsive Web Design FreeCodeCamp</title>
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <img id="header-img" src="./images/logo.png" alt="Original trombones logo">
-    </div>
+  <header id="header">
+    <img id="header-img" src="./images/logo.png" alt="Original trombones logo">
     <nav id="nav-bar">
       <ul>
         <li><a class="nav-link" href="#features">Features</a></li>
@@ -30,20 +28,88 @@
     </nav>
   </header>
   <main>
-    <section></section>
-    <div class="wrapper">
-      <section></section>
-      <section></section>
-      <section></section>
+    <section>
+      <h2 class="title__form">Handcrafted, home-made masterpieces</h2>
+      <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <input id="email" type="email" name="email" placeholder="Enter your email address">
+        <input id="submit" type="submit" value="Get Started"></input>
+      </form>
+    </section>
+    <div class="container">
+      <section id="features">
+        <div class="block">
+          <div><img class="block__icon" src="./images/fire.svg"></div>
+          <div class="block__text">
+            <h2 class="text__title">Premium Materials</h2>
+            <p class="text__descr">Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+          </div>
+        </div>
+        <div class="block">
+          <div><img class="block__icon" src="./images/truck.svg"></div>
+          <div class="block__text">
+            <h2 class="text__title">Fast Shipping</h2>
+            <p class="text__descr">We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+          </div>
+        </div>
+        <div class="block">
+          <div><img class="block__icon" src="./images/battery.svg"></div>
+          <div class="block__text">
+            <h2 class="text__title">Quality Assurance</h2>
+            <p class="text__descr">For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="how-it-works">
+        <iframe id="video" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+      </section>
+
+      <section id="pricing">
+        <div class="product" id="tenor">
+          <div class="product__title">tenor trombone</div>
+          <h2 class="product__price">$600</h2>
+          <ol class="product__ol">
+            <li class="product__list">Lorem ipsum.</li>
+            <li class="product__list">Lorem ipsum.</li>
+            <li class="product__list">Lorem ipsum, dolor.</li>
+            <li class="product__list">Lorem ipsum.</li>
+          </ol>
+          <button class="product__button">Select</button>
+        </div>
+
+        <div class="product" id="bass">
+          <div class="product__title">bass trombone</div>
+          <h2 class="product__price">$900</h2>
+          <ol class="product__ol">
+            <li class="product__list">Lorem ipsum.</li>
+            <li class="product__list">Lorem ipsum.</li>
+            <li class="product__list">Lorem ipsum, dolor.</li>
+            <li class="product__list">Lorem ipsum.</li>
+          </ol>
+          <button class="product__button">Select</button>
+        </div>
+
+        <div class="product" id="valve">
+          <div class="product__title">valve trombone</div>
+          <h2 class="product__price">$1200</h2>
+          <ol class="product__ol">
+            <li class="product__list">Plays similar to a Trumpet</li>
+            <li class="product__list">Great for Jazz Bands</li>
+            <li class="product__list">Lorem ipsum, dolor.</li>
+            <li class="product__list">Lorem ipsum.</li>
+          </ol>
+          <button class="product__button">Select</button>
+        </div>
+      </section>
     </div>
   </main>
-  <footer>
-    <ul>
-      <li><a href="#">Privacy</a></li>
-      <li><a href="#">Terms</a></li>
-      <li><a href="#">Contact</a></li>
+  <footer class="footer">
+    <ul class="footer__ul">
+      <li class="footer__li"><a href="#">Privacy</a></li>
+      <li class="footer__li"><a href="#">Terms</a></li>
+      <li class="footer__li"><a href="#">Contact</a></li>
     </ul>
-    <p>Copyright 2016, Original Trombones</p>
+    <p class="footer__p">Copyright 2016, Original Trombones</p>
   </footer>
 </body>
 </html>
